Switch to use Base64 class.